fix(blog): slight uneven right margin when toc hidden

--- a/apps/blog/src/app.css
+++ b/apps/blog/src/app.css
@@ -28,7 +28,7 @@ h4 {
 }
 
 .toc {
-    @apply hidden p-3 sm:block sm:basis-1/4;
+    @apply ml-4 hidden p-3 sm:block sm:basis-1/4;
 }
 
 .toc-link {
